--- a/Edukator.PresentationLayer/wwwroot/Edukator-Starter/about.html
+++ b/Edukator.PresentationLayer/wwwroot/Edukator-Starter/about.html
@@ -34,7 +34,7 @@ Author URL: http://w3layouts.com
           aria-label="Toggle navigation">
           <span class="navbar-toggler-icon fa icon-expand fa-bars"></span>
           <span class="navbar-toggler-icon fa icon-close fa-times"></span>
-          </span>
+         
         </button>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
           <ul class="navbar-nav ml-lg-auto">
@@ -69,7 +69,7 @@ Author URL: http://w3layouts.com
             <div class="theme-switch-wrapper">
               <label class="theme-switch" for="checkbox">
                 <input type="checkbox" id="checkbox">
-                <div class="mode-container py-1">
+                <div class="mode-container py-1"> 
                   <i class="gg-sun"></i>
                   <i class="gg-moon"></i>
                 </div>
@@ -204,6 +204,7 @@ Author URL: http://w3layouts.com
             <p>Director</p>
           </div>
         </div>
+          </div>
         <!-- end team member -->
         <div class="col-lg-3 col-6 team-wrap mt-5">
           <div class="team-member text-center">
@@ -344,7 +345,7 @@ Author URL: http://w3layouts.com
             <div class="bottom-info">
               <div class="header-section pr-lg-5">
                 <h5 class="title-subw3hny mb-3">Join With Us</h5>
-                <h3 class="title-w3l mb-3">Want to Join?</span>
+                <h3 class="title-w3l mb-3">Want to Join?
                 </h3>
                 <p>Lorem ipsum dolor sit amet elit. Velit beatae rem ullam dolore nisi esse quasi, sit amet. Lorem ipsum
                   dolor sit amet elit.</p>
@@ -427,7 +428,7 @@ Author URL: http://w3layouts.com
         </div>
       </div>
     </div>
-    </div>
+   
     <!-- copyright -->
     <div class="copyright-footer text-center">
       <div class="container">
